; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_setattrat.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_setattrat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }
%struct.attr = type { i32 }
%struct.mount = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.mount*, i8*, i32)* }

@MAX_PATH = common dso_local global i32 0, align 4
@N_SYMLINK_FOLLOW = common dso_local global i32 0, align 4
@N_SYMLINK_NOFOLLOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @generic_setattrat(%struct.fd* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.attr, align 4
  %7 = alloca %struct.fd*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.mount*, align 8
  %15 = getelementptr inbounds %struct.attr, %struct.attr* %6, i32 0, i32 0
  store i32 %2, i32* %15, align 4
  store %struct.fd* %0, %struct.fd** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %16 = load i32, i32* @MAX_PATH, align 4
  %17 = zext i32 %16 to i64
  %18 = call i8* @llvm.stacksave()
  store i8* %18, i8** %10, align 8
  %19 = alloca i8, i64 %17, align 16
  store i64 %17, i64* %11, align 8
  %20 = load %struct.fd*, %struct.fd** %7, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %9, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %4
  %25 = load i32, i32* @N_SYMLINK_FOLLOW, align 4
  br label %28

26:                                               ; preds = %4
  %27 = load i32, i32* @N_SYMLINK_NOFOLLOW, align 4
  br label %28

28:                                               ; preds = %26, %24
  %29 = phi i32 [ %25, %24 ], [ %27, %26 ]
  %30 = call i32 @path_normalize(%struct.fd* %20, i8* %21, i8* %19, i32 %29)
  store i32 %30, i32* %12, align 4
  %31 = load i32, i32* %12, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %28
  %34 = load i32, i32* %12, align 4
  store i32 %34, i32* %5, align 4
  store i32 1, i32* %13, align 4
  br label %49

35:                                               ; preds = %28
  %36 = call %struct.mount* @find_mount_and_trim_path(i8* %19)
  store %struct.mount* %36, %struct.mount** %14, align 8
  %37 = load %struct.mount*, %struct.mount** %14, align 8
  %38 = getelementptr inbounds %struct.mount, %struct.mount* %37, i32 0, i32 0
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32 (%struct.mount*, i8*, i32)*, i32 (%struct.mount*, i8*, i32)** %40, align 8
  %42 = load %struct.mount*, %struct.mount** %14, align 8
  %43 = getelementptr inbounds %struct.attr, %struct.attr* %6, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 %41(%struct.mount* %42, i8* %19, i32 %44)
  store i32 %45, i32* %12, align 4
  %46 = load %struct.mount*, %struct.mount** %14, align 8
  %47 = call i32 @mount_release(%struct.mount* %46)
  %48 = load i32, i32* %12, align 4
  store i32 %48, i32* %5, align 4
  store i32 1, i32* %13, align 4
  br label %49

49:                                               ; preds = %35, %33
  %50 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %50)
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @path_normalize(%struct.fd*, i8*, i8*, i32) #2

declare dso_local %struct.mount* @find_mount_and_trim_path(i8*) #2

declare dso_local i32 @mount_release(%struct.mount*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
